--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,90 @@
-.App {
-  text-align: center;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body {
   min-height: 100vh;
+  color: white;
+   background-image: url(/src/components/abstract-geometric-banner-free-vector.jpg);
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card {
+  min-width: 500px;
+  margin: 45px auto;
+  height: 40rem;
+  background-color:  #358e8e ;
+  color: #000000;
+  backdrop-filter: blur(20px);
+  box-shadow: 0 10px 10px 0 rgb(12, 5, 5);
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  padding: 2rem;
+  border-radius: 0.5rem;
+}
+.card img {
+  width: 150px;
+  height: 150px;
+  border: 4px solid #000000;
+  border-radius: 50%;
+  margin-bottom: 30px;
+
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card h1 span {
+  margin: 0.5rem 0;
+}
+.buttons {
+  width: 100%;
+  height: 700px;
+   display: grid; 
+   grid-template-columns: 1fr 1fr; 
+  gap: 1rem;
+  margin-top: 2rem;
+}
+.buttons  {
+  height: 3rem;
+  color: #000000;
+  text-transform: uppercase;
+  background: transparent;
+  border: 0.1rem solid #000000;
+  box-shadow: 0 10px 10px 0 rgb(12, 5, 5);
+  border-radius: 10px;
+  font-weight: 900;
+  cursor: pointer;
+  
+}
+.buttons buttons.buttons {
+  background: rgba(0, 0, 0, 0.205);
+}
+.buttons  {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+}
+.buttons.active .follow {
+  background: rgba(255, 0, 0, 0.7);
+}
+.next{
+  border: none;
+  border-radius: 0.5rem;
+  outline: 0;
+  font-size: 1.2rem;
+  font-weight: 600;
+  background-color:#358e8e;
+  padding: .5rem 1rem;    
+  margin: 4px auto;
+  text-transform: uppercase;
+  cursor: pointer;
+  display: block;
+  letter-spacing: 2px;
+  box-shadow: 0 4px 0 0 #bbbbbb;
 }
